--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: Update odometer.csv nightly
 
 on:
+  push:
+    branches: master
   schedule:
     # Run nightly at 02:00 Swedish time, UTC is -2h from Sweden
     - cron: "00 00 * * *"
@@ -29,7 +31,7 @@ jobs:
         pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Update odometer.csv
-      run: echo `date +%Y-%m-%dT%H:%M:%S%z`,`voc -u ${{ secrets.username }} -p ${{ secrets.password }} print odometer` >> odometer.csv
+      run: echo `date -u +%FT%TZ`,`voc -u ${{ secrets.username }} -p ${{ secrets.password }} print odometer` >> odometer.csv
       # TODO: Run nbconvert and update notebook HTML output
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
