--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
-name: Update odometer.csv nightly
+name: Daily update of odometer.csv
 
 on:
-  push:
-    branches: master
   schedule:
     # Run nightly at 02:00 Swedish time, UTC is -2h from Sweden
     - cron: "00 00 * * *"
