--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: Daily update of odometer.csv
 
 on:
+  push:
+    branches: [ master ]
   schedule:
     # Run nightly at 02:00 Swedish time, UTC is -2h from Sweden
     - cron: "00 00 * * *"
@@ -30,7 +32,8 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Update odometer.csv
       run: echo `date -u +%FT%TZ`,`voc -u ${{ secrets.username }} -p ${{ secrets.password }} print odometer` >> odometer.csv
-      # TODO: Run nbconvert and update notebook HTML output
+    - name: Generate volvo.html
+      run: make html
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: Update of odometer.csv
