--- a/.github/workflows/update-html.yml
+++ b/.github/workflows/update-html.yml
@@ -1,9 +1,9 @@
-name: Update data and generate volvo.html
+name: Generate volvo.html
 
 on:
-  schedule:
-    # Run nightly at 02:00 Swedish time, UTC is -2h from Sweden
-    - cron: "00 00 * * *"
+  push:
+    branches: 
+      - master
     
 jobs:
   build:
@@ -26,8 +26,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Update odometer.csv
-      run: echo `date -u +%FT%TZ`,`voc -u ${{ secrets.username }} -p ${{ secrets.password }} print odometer` >> odometer.csv
     - name: Generate volvo.html
       run: make html
     - uses: stefanzweifel/git-auto-commit-action@v4
