--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
       run: make html
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: Update of odometer.csv
+        commit_message: Scheduled daily update
