--- a/.github/workflows/update-odometer.yml
+++ b/.github/workflows/update-odometer.yml
@@ -1,4 +1,4 @@
-name: Update data
+name: Manual data update
 
 on: workflow_dispatch
     
@@ -18,4 +18,4 @@ jobs:
       run: echo `date -u +%FT%TZ`,`voc -u ${{ secrets.username }} -p ${{ secrets.password }} print odometer` >> odometer.csv
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: Scheduled daily update
+        commit_message: Manual update of data
